# AutoForm_MCP

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  README.zh-CN.md  codex_mcp_config.autoform-mcp.toml  environment.yml  pyproject.toml
autoform_agent/: __init__.py  __main__.py  agent_runtime.py  cli.py  coverage.py  diagnostics.py  extension.py  gui_automation.py  jobs.py  materials.py  mcp_server.py  paths.py  process.py  queue.py  quicklink.py  r12_demo.py  release.py  result_viewer.py  safety.py  solver.py
autoform_agent/mcp_tools/: environment.py  gui.py  project.py  queue.py  quicklink.py  reference.py  release.py  reporting.py
autoform_mcp_agent/: __init__.py  __main__.py  af_api.py  agent_runtime.py  cli.py  commands.py  config.py  coverage.py  diagnostics.py  gui_automation.py  inventory.py  jobs.py  mcp_server.py  project_workflow.py  quicklink.py  r12_demo.py  release.py  report.py  result_viewer.py  results.py  safety.py
autoform_mcp_agent/mcp_tools/: __init__.py  commands.py  gui.py  jobs.py  materials.py  solver.py  status.py
docs/: api_runtime_call_chain.md  beginner_onboarding_zh.md  example_project_baselines.json  gui_result_review_scope.md  v1_1_gui_result_review_goals.md
tests/: test_gui_automation.py  test_mcp_tools.py  test_process.py  test_project_workflow.py  test_r12_demo.py  test_result_viewer.py
